todo-list: Fix scrolling bug on mobile

--- a/app-suite/todo-list/app.css
+++ b/app-suite/todo-list/app.css
@@ -1,9 +1,3 @@
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
 body {
   font-family: 'Roboto';
   background-color: #B03D4F;
@@ -12,9 +6,14 @@ body {
   flex-direction: column;
 }
 
+html {
+  overflow-y: hidden;
+}
+
 #app {
   flex: 1;
-  width: 30em;
+  overflow-y: scroll;
+  max-width: 30em;
   align-self: center;
   background-color: #fff;
   padding: 12px 0;
